Some changes. Will remove the jQuery dependency later. I'm just lazy ;)

--- a/test.html
+++ b/test.html
@@ -1,10 +1,12 @@
 <html>
 <head>
   <title>Radian Test</title>
-  <script type='text/javascript' src='lib/radian.js'></script>
+  <script type='text/javascript' src='bower_components/raphael/raphael-min.js'></script>
+  <script type='text/javascript' src='bower_components/jQuery/jquery.js'></script>
 </head>
 <body>
   <div id='wrapper'>Loading...</div>
+  <script type='text/javascript' src='lib/radian.js'></script>
   <script type='text/javascript'>
     var radian = Radian();
   </script>
